# firmauy-mcp-inspect

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
